# galman

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  build.bat  build.sh  clean.sh  deps.sh  package.sh  run.bat  run.sh  set-version.sh
.github/workflows/: build.yml
data/scripts/: ComfyDownscale2.js  ComfyDownscale2.json  ComfyUpscale2.js  ComfyUpscale4.js  ConcatVideos.js  PadNumbers.js  RenameByDate.js  RepairVideo.js  RotateImages.js
packaging/linux/: galman.desktop
qml/: Theme.qml
qml/App/: Main.qml
qml/Components/: AboutDialog.qml  CommandPanel.qml  ConfirmDialog.qml  CreateFolderDialog.qml  FocusFrame.qml  FocusRememberingScope.qml  FolderItem.qml  FolderView.qml  FolderViewGrid.qml  FolderViewSortBar.qml  FolderViewToolBar.qml  ImageAdjustmentsConstants.qml  ImageAdjustmentsEffect.qml  ImageAdjustmentsPanel.qml  ImageCompare.qml  ImageDisplay.qml  ImagePreview.qml  InputDialog.qml  MediaDisplay.qml  RenameDialog.qml  SettingsDialog.qml  ShortcutsDialog.qml  StatusBadge.qml
qml/Shaders/: ImageAdjustments.frag  ImageBloomBlur.frag  ImageBloomComposite.frag  ImageBloomExtract.frag  ImageBloomPass.frag
scripts/: ComfyUpscale2.json  ComfyUpscale4.json  ConcatVideos.js  ConvertImages.js  FlipImages.js  RepairVideo.js
scripts/linux/: build.sh  clean.sh  deps-with-temporary-backports-disable.sh  deps.sh  install-desktop.sh  package.sh  release-version.sh  run.sh  set-version.sh
scripts/windows/: build.bat  run.bat
src/: AppLogger.cpp  AppLogger.h  ApplicationVersion.h.in  BackupSystem.cpp  BackupSystem.h  ComfyClient.cpp  ComfyClient.h  ComfyWorkflowParser.cpp  ComfyWorkflowParser.h  CopyWorker.cpp  CopyWorker.h  FavoritePairsManager.cpp  FavoritePairsManager.h  FileOperationUtils.cpp  FileOperationUtils.h  FolderBrowserModel.cpp  FolderBrowserModel.h  FolderCompareModel.cpp  FolderCompareModel.h  FolderCompareSideModel.cpp  FolderCompareSideModel.h  ImageAutoAdjuster.cpp  ImageAutoAdjuster.h  ImageMetadataUtils.cpp  ImageMetadataUtils.h  LanguageManager.cpp  LanguageManager.h  PlatformUtils.cpp  PlatformUtils.h  RowMatchUtils.h  ScriptEngine.cpp  ScriptEngine.h  ScriptManager.cpp  ScriptManager.h  SelectionStatisticsUtils.cpp  SelectionStatisticsUtils.h  TrashWorker.cpp  TrashWorker.h  VideoThumbnailUtils.cpp  VideoThumbnailUtils.h  (+3 more)
translations/: galman_en.ts  galman_es.ts  galman_fr.ts  galman_it.ts  galman_nl.ts  galman_ru.ts  galman_zh.ts
